# cran-pm

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  codemeta.json  pyproject.toml
.github/workflows/: ci.yml  docker.yml
configs/: europe_multiscale.yaml  europe_small_test.yaml
docker/: Dockerfile
docs/: index.html
docs/assets/: style.css
paper/: CASE_STUDIES_BLOCKER.md  FIGURES.md  OUTLINE.md  README.md  main.tex
paper/bib/: eccv_refs.bib  gmd_extra.bib
paper/figures/: bench_rocm.json  froude_correlations.json  ood_viz_stats.json  physics_ablations_all.json  physics_ablations_cranpm.json  shuffle_loss_summary.json  table_gpu_benchmarks.tex  table_physics_ablations.tex
paper/scripts/: cranpm_plots.py  fig_ablation_bars.py  fig_annual_mean_europe.py  fig_attention_elevation_slicer.py  fig_best_day_comparison.py  fig_case_po_valley_topo.py  fig_case_study.py  fig_china_shuffling_gif.py  fig_country_heatmap.py  fig_eea_stations_europe.py  fig_froude_elevation.py  fig_gpu_benchmarks.py  fig_input_data_flow.py  fig_lead_time_curves.py  fig_method_comparison.py  fig_ood_viz_8regions.py  fig_physics_ablations_table.py  fig_robinson_study_domain.py  fig_shuffle_loss_curves.py  fig_shuffle_theory.py  fig_software_stack.py  physics_ablations.py  pinpoint_tile_forecast.py  prerender_europe_date_country.py  run_all_figures.sh  run_case_study.py  sbatch_build_europe_2018.sh  sbatch_case_study.sh  sbatch_gpu_benchmarks.sh  sbatch_physics_ablations.sh  sbatch_scaling.sh  sbatch_shuffle_ablation.sh  sbatch_zero_shot_ood.sh  sbatch_zero_shot_test_india.sh  stage_hf_inference_samples.py
paper/sections/: 01_introduction.tex  02_related.tex  03_model.tex  04_software.tex  05_performance.tex  06_evaluation.tex  07_cases.tex  08_ablation.tex  09_limitations.tex  10_availability.tex  11_conclusions.tex  appendix_B_theory.tex
paper/tables/: table_ablation.tex  table_phys_ablation_main.tex
src/cranpm/: __init__.py  config.py
src/cranpm/cli/: __init__.py  main.py
src/cranpm/gpu/: __init__.py  bench.py
src/cranpm/inference/: __init__.py  baselines_adapter.py  checkpoint.py  europe_inputs.py  forecaster.py  normalize.py  tiling.py
src/cranpm/models/: __init__.py  cross_attention.py  cross_attention_variants.py  global_branch.py  local_branch.py  multiscale_cranpm_variant.py  multiscale_topoflow.py  prediction_head.py  scan_orders.py  topoflow_block.py  wind_scan.py
src/cranpm/training/: __init__.py  lightning_module.py  lightning_module_variant.py  loss.py  visualize.py
src/cranpm/utils/: __init__.py  pos_embed.py
tests/: test_cli.py  test_config.py  test_imports.py  test_inference.py
