[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "cranpm"
version = "1.0.0"
description = "Cross-Resolution Attention Network for high-resolution PM2.5 forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ammar Kheder", email = "ammarkheder@outlook.fr" },
]
keywords = [
    "air-quality",
    "PM2.5",
    "forecasting",
    "deep-learning",
    "earth-science",
    "atmospheric-science",
    "ERA5",
    "CAMS",
    "super-resolution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "timm>=0.9",
    "zarr>=2.16",
    "numcodecs>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
    "xarray>=2023.1",
    "netCDF4>=1.6",
    "pyyaml>=6.0",
    "Pillow>=10.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
download = [
    "cdsapi>=0.7",
    "requests>=2.31",
]
viz = [
    "seaborn>=0.13",
    "plotly>=5.17",
    "cartopy>=0.22",
]
app = [
    "gradio>=4.0",
]
eval = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.7",
    "pre-commit>=3.5",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]
all = [
    "cranpm[download,viz,app,eval]",
]

[project.urls]
Homepage = "https://github.com/AmmarKheder/cran-pm"
Documentation = "https://ammarkheder.github.io/cran-pm/"
Repository = "https://github.com/AmmarKheder/cran-pm"
Issues = "https://github.com/AmmarKheder/cran-pm/issues"
Changelog = "https://github.com/AmmarKheder/cran-pm/blob/main/CHANGELOG.md"

[project.scripts]
cranpm = "cranpm.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cranpm"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/configs",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CITATION.cff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "NPY", # numpy
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring a GPU",
    "integration: marks integration tests requiring data",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
